# Wolfenstein3D

./: .gitignore  CMakeLists.txt  Devolucion  README.md
ClientLogin/: Login.cpp  Login.h  Login.ui  main.cpp  ui_Login.h
Informe/: DocumentacionTecnica.md  Instalacion.md  ManualDeProyecto.md  ManualDeUsuario.md
client_src/: Client.cpp  Client.h  ClientData.cpp  ClientData.h  DrawingInfo.cpp  DrawingInfo.h  EventHandler.cpp  EventHandler.h  GameInterface.cpp  GameInterface.h  InstructionLooper.cpp  InstructionLooper.h  LeaderboardRenderer.cpp  LeaderboardRenderer.h  PlayerView.cpp  PlayerView.h  ProtectedDrawingInfo.cpp  ProtectedDrawingInfo.h  Raycaster.cpp  Raycaster.h  RaycastingRenderer.cpp  RaycastingRenderer.h  RaycastingThread.cpp  RaycastingThread.h  SoundHandler.cpp  SoundHandler.h  SpriteRenderer.cpp  SpriteRenderer.h  SpriteSelector.cpp  SpriteSelector.h  TexturesContainer.cpp  UI_Handler.cpp  UI_Handler.h  UI_Info.cpp  UI_Info.h  Window.cpp  Window.h  client_main.cpp
client_src/Exceptions/: RaycastingException.h  SDLException.cpp  SDLException.h  SoundLoadingException.cpp  SoundLoadingException.h
client_src/clientWindow/: Resolution.cpp  Resolution.h  ResolutionList.cpp  ResolutionList.h  StringList.cpp  StringList.h  clientwindow.cpp  clientwindow.h  clientwindow.ui  clientwindow.ui.autosave
client_src/login/: ClientLoginScreen.cpp  ClientLoginScreen.h  Instructivo.md  Login.cpp  ui_Login.h
client_src/sound/: Music.cpp  Music.h  SoundEffect.cpp  SoundEffect.h  SoundID.h  SoundsContainer.cpp  SoundsContainer.h
client_src/textures/: DynamicTexture.cpp  DynamicTexture.h  FontTexture.cpp  FontTexture.h  Texture.cpp  Texture.h  TextureID.h  TextureSet.cpp  TextureSet.h  TexturesContainer.cpp  TexturesContainer.h
common_src/: AddrInfo.cpp  AddrInfo.h  BlockingQueue.h  Blood.cpp  Blood.h  BulletItem.cpp  BulletItem.h  ChainGunItem.cpp  ChainGunItem.h  Collider.cpp  Collider.h  Configuration.cpp  Configuration.h  DirectedPositionable.cpp  DirectedPositionable.h  Door.cpp  Door.h  Doors.cpp  Doors.h  ErrorSocket.h  Food.cpp  Food.h  GameConstants.h  HealthRecover.cpp  HealthRecover.h  Item.cpp  Item.h  Items.cpp  Items.h  KeyItem.cpp  KeyItem.h  MachineGunItem.cpp  MachineGunItem.h  ManualDoor.cpp  ManualDoor.h  Map.cpp  Map.h  Peer.cpp  Peer.h  PlayerPosition.cpp  (+19 more)
common_src/Exceptions/: ConfigurationException.cpp  ConfigurationException.h  ErrorMap.cpp  ErrorMap.h  ErrorSocket.cpp  FontLoadingException.cpp  FontLoadingException.h  HealthRecoverException.cpp  HealthRecoverException.h  ItemException.cpp  ItemsException.cpp  ItemsException.h  RaycastingException.cpp  TextureLoadingException.cpp  TextureLoadingException.h  WeaponItemException.cpp  WeaponItemException.h  WindowException.cpp  WindowException.h  WolfensteinException.cpp  WolfensteinException.h
editor_src/: CMakeLists.txt  Editor.pro  Editor.pro.user.b61a224  EditorIcon.h  InvalidFileException.cpp  InvalidFileException.h  MessageBox.cpp  MessageBox.h  coordinate.cpp  coordinate.h  editor.qrc  iconsPaths.h  iconscontainer.cpp  iconscontainer.h  itemList.cpp  itemList.h  itemslist.cpp  itemslist.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.cpp  map.h  mapelement.cpp  mapelement.h  maphandler.cpp  maphandler.h  mapparser.cpp  mapparser.h  mapwidget.h  trashbin.cpp  trashbin.h
editor_src/Editor/: CMakeLists.txt  Editor.pro  coordinate.cpp  coordinate.h  editor.qrc  iconcontainer.cpp  iconcontainer.h  iconscontainer.cpp  iconscontainer.h  item.h  itemList.cpp  itemList.h  itemlist.cpp  itemlist.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.cpp  map.h  mapelement.cpp  mapelement.h  maphandler.cpp  maphandler.h  mapparser.cpp  mapparser.h  trashbin.cpp  trashbin.h
editor_src/Editor/icons/: iconsPaths.h
editor_src/build-Editor-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Editor  build.ninja  cmake_install.cmake  moc_itemList.cpp  moc_mainwindow.cpp  moc_map.cpp  moc_maphandler.cpp  moc_trashbin.cpp  qrc_editor.cpp  ui_mainwindow.h
editor_src/build-Editor-Desktop_Qt_5_15_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-2b8d0f71127189694ce9.json  cmakeFiles-v1-620213c677b6a28bb009.json  codemodel-v2-ba4c7d412db6f59cf489.json  codemodel-v2-fafe587b2b8ab27f07c6.json  index-2021-02-14T00-38-19-0109.json  index-2021-02-14T00-51-23-0093.json  target-Editor-Debug-69dc14469a47971f262f.json  target-Editor-Debug-768f63b87bc5a8c48c68.json  target-Editor_autogen-Debug-c6f4cd223b707bb33a8d.json  target-Editor_autogen_timestamp_deps-Debug-67179d3c222b42cbfbd7.json
editor_src/build-Editor-Desktop_Qt_5_15_2_GCC_64bit-Debug/Editor_autogen/: deps  mocs_compilation.cpp
editor_src/build-Editor-Desktop_Qt_5_15_2_GCC_64bit-Debug/Editor_autogen/EWIEGA46WW/: moc_itemList.cpp  moc_itemList.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_maphandler.cpp  moc_maphandler.cpp.d  moc_trashbin.cpp  moc_trashbin.cpp.d
editor_src/build-Editor-Desktop_Qt_5_15_2_GCC_64bit-Debug/Editor_autogen/include/: ui_mainwindow.h
editor_src/icons/: iconsPaths.h
server_src/: ClientHandler.cpp  ClientHandler.h  ClientManager.cpp  ClientManager.h  DirectoryWalker.cpp  DirectoryWalker.h  ErrorYAML.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  GamesHandler.cpp  GamesHandler.h  Key.cpp  Key.h  LeaderBoard.cpp  LeaderBoard.h  Lobby.cpp  Lobby.h  MapsReader.cpp  MapsReader.h  Player.cpp  Player.h  PlayerActions.cpp  PlayerActions.h  PlayerAttributes.cpp  PlayerAttributes.h  ProtectedQueue.cpp  ProtectedQueue.h  RandomPosition.cpp  RandomPosition.h  Sound.cpp  Sound.h  ThClient.cpp  ThClient.h  config.yaml  server_main.cpp
server_src/Bots/: Bot.cpp  Bot.h  Destripador.lua
server_src/Exceptions/: GameException.cpp  GameException.h  HealthRecoverException.cpp  HealthRecoverException.h  ItemException.cpp  ItemException.h  ItemsException.cpp  ItemsException.h
server_src/Items/: Blood.cpp  Blood.h  BulletItem.cpp  BulletItem.h  ChainGunItem.cpp  ChainGunItem.h  HealthRecover.cpp  HealthRecover.h  Item.h  Items.cpp  Items.h  KeyItem.cpp  MachineGunItem.cpp  RocketLauncherItem.cpp  (+2 more)
(+26 files in other folders)
